--- a/templates/index.html
+++ b/templates/index.html
@@ -1,118 +1,34 @@
-{% extends "base.html" %}
-
-{% block process %}
-{{process_list}}
-{% endblock %}
-
-{% block tables %}
-{{table_list}}
-{% endblock %}
-
-{% block antecedent %}
-{{antecedent}}
-{% endblock %}
-
-{% block consequent %}
-{{consequent}}
-{% endblock %}
-
-{% block buttons %}
+{% extends "in.html" %}
+{% block tree %}
+<p id = "GFG_UP" style = 
+"font-size: 15px; font-weight: bold;">
+</p>
+<div class="container">
+<div class="row">
+<div class="tree">
 <form action="#" method="POST">
-<input  type="button" value="full_undo" name="full_undo">
-<input  type="button" value="undo" name="undo">
-<input  type="button" value="pause" name="pause">
-<input  type="button" value="next" name="next">
-<input  type="button" value="full_next" name="full_next">
+    <ul>
+        {% for i in cv.keys() %}
+
+            <li>
+            <input  type="submit"  class="btn-lg" value={{i}} name="p">
+            <ul>
+            <li>
+            <input  type="submit"   class="btn-lg" value={{cv[i][0]}} name="TRUE_{{i}}">
+            </li>
+ 
+            <li>
+            <input  type="submit"  class="btn-lg" value={{cv[i][1]}} name="FALSE_{{i}}">
+            </li> 
+      
+        </ul>       
+            </li>
+        {% endfor %}
+
+    </ul>
 </form>
-{% endblock %}
-
-{%block selected_node %}
-<p>selected node is </p>
-{% endblock %}
-
-
-{%block manual_entry %}
-<form action="#" method="POST">
-    <p>ENTER THE COLUMN NAME:</p>
-    <p><input type="text" name="nm"/> </p> <!--input space-->
-    <p><input type="submit" value="submit" /></p><!--creating submit function-->
-</form>
-{% endblock %}
-
-{%block user_options %}
-<form action="#" method="POST"></form>
-<div class="form-check form-check-inline">
-    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1" checked>
-    <label class="form-check-label" for="inlineRadio1"><h3>ENTROPY</h3></label>
-  </div>
-  
-          <form>
-            <div class="form-check">
-                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
-                <label class="form-check-label" for="exampleRadios1">
-                  OPTION1
-                </label>
-              </div>
-              <div class="form-check">
-                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
-                <label class="form-check-label" for="exampleRadios2">
-                  OPTION2
-                </label>
-              </div>
-              <div class="form-check">
-                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="option3" >
-                <label class="form-check-label" for="exampleRadios3">
-                  OPTION3
-                </label>
-              </div>
-              <div class="form-check">
-                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
-                <label class="form-check-label" for="exampleRadios2">
-                  OPTION4
-                </label>
-              </div>
-              <div class="form-check">
-                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="option3" >
-                <label class="form-check-label" for="exampleRadios3">
-                  OPTION5
-                </label>
-              </div>
-            </form>
-    <div class="form-check form-check-inline">
-    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-    <label class="form-check-label" for="inlineRadio2"><h3>FREQUENCY</h3></label>
-    </div>
-        <form>
-            <div class="form-check">
-                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" >
-                <label class="form-check-label" for="exampleRadios1">
-                  OPTION1
-                </label>
-              </div>
-              <div class="form-check">
-                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
-                <label class="form-check-label" for="exampleRadios2">
-                  OPTION2
-                </label>
-              </div>
-              <div class="form-check">
-                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="option3" >
-                <label class="form-check-label" for="exampleRadios3">
-                  OPTION3
-                </label>
-              </div>
-              <div class="form-check">
-                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
-                <label class="form-check-label" for="exampleRadios2">
-                  OPTION4
-                </label>
-              </div>
-              <div class="form-check">
-                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="option3" >
-                <label class="form-check-label" for="exampleRadios3">
-                  OPTION5
-                </label>
-              </div>
-          </form>
-        </form>
+</div>
+</div>
+</div>
+{{k}}
 {% endblock %}
