--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-{% extends "in.html" %}
+{% extends "base.html" %}
 {% block tree %}
 <p id = "GFG_UP" style = 
 "font-size: 15px; font-weight: bold;">
