--- a/templates/indexx.html
+++ b/templates/indexx.html
@@ -7,3 +7,4 @@
 <div class="row">
 <div class="tree">
 <form action="#" method="POST">
+<ul><li><input  type='submit'  class='btn-lg' value='A' name='A'><ul><li><input  type='submit'   class='btn-lg' value='-' name='TRUE_A'></li><li><input  type='submit'  class='btn-lg' value='-' name='FALSE_A'></li></ul></li></ul></form></div></div></div> {% endblock %}
