--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,7 @@
 /*Now the CSS Created by R.S*/
 * {margin: 0; padding: 0;}
 
+
 .tree ul {
     padding-top: 20px; position: relative;
 	
@@ -25,12 +26,12 @@
 .tree li::before, .tree li::after{
 	content: '';
 	position: absolute; top: 0; right: 50%;
-	border-top: 5px solid #999;
+	border-top: 5px solid rgb(240, 114, 114);
 	width: 50%; height: 20px;
 }
 .tree li::after{
 	right: auto; left: 50%;
-	border-left: 5px solid #999;
+	border-left: 5px solid rgb(10, 124, 255);
 }
 
 /*We need to remove left-right connectors from elements without 
@@ -49,7 +50,7 @@ right connector from last child*/
 }
 /*Adding back the vertical connector to the last nodes*/
 .tree li:last-child::before{
-	border-right: 5px solid #999;
+	border-right: 5px solid rgb(11, 230, 77);
 	border-radius: 0 5px 0 0;
 	-webkit-border-radius: 0 5px 0 0;
 	-moz-border-radius: 0 5px 0 0;
@@ -64,12 +65,12 @@ right connector from last child*/
 .tree ul ul::before{
 	content: '';
 	position: absolute; top: 0; left: 50%;
-	border-left: 5px solid #999;
+	border-left: 5px solid rgb(255, 0, 0);
 	width: 0; height: 20px;
 }
 
 .tree li a{
-	border: 5px solid #999;
+	border: 5px solid rgb(255, 0, 0);
 	padding: 5px 10px;
 	text-decoration: none;
 	color: #666;
@@ -89,13 +90,13 @@ right connector from last child*/
 /*Time for some hover effects*/
 /*We will apply the hover effect the the lineage of the element also*/
 .tree li a:hover, .tree li a:hover+ul li a {
-	background: #c8e4f8; color: #000; border: 5px solid #94a0b4;
+	background: #f00cab; color: #000; border: 5px solid #0055e7;
 }
 /*Connector styles on hover*/
 .tree li a:hover+ul li::after, 
 .tree li a:hover+ul li::before, 
 .tree li a:hover+ul::before, 
 .tree li a:hover+ul ul::before{
-	border-color:  #94a0b4;
+	border-color:  #005eff;
 }
 
