--- a/templates/base.html
+++ b/templates/base.html
@@ -15,8 +15,10 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{url_for('static',filename='style_css___.css')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename='style.css')}}">
     <title>Hello, world!</title>
+
+  
   </head>
   <body>
  
