--- a/static/style_.css
+++ b/static/style_.css
@@ -26,12 +26,12 @@
 .tree li::before, .tree li::after{
 	content: '';
 	position: absolute; top: 0; right: 50%;
-	border-top: 5px solid rgb(240, 114, 114);
+	border-top: 5px solid #000;
 	width: 50%; height: 20px;
 }
 .tree li::after{
 	right: auto; left: 50%;
-	border-left: 5px solid rgb(10, 124, 255);
+	border-left: 5px solid #000;
 }
 
 /*We need to remove left-right connectors from elements without 
@@ -50,7 +50,7 @@ right connector from last child*/
 }
 /*Adding back the vertical connector to the last nodes*/
 .tree li:last-child::before{
-	border-right: 5px solid rgb(11, 230, 77);
+	border-right: 5px solid #000;
 	border-radius: 0 5px 0 0;
 	-webkit-border-radius: 0 5px 0 0;
 	-moz-border-radius: 0 5px 0 0;
@@ -65,12 +65,12 @@ right connector from last child*/
 .tree ul ul::before{
 	content: '';
 	position: absolute; top: 0; left: 50%;
-	border-left: 5px solid rgb(255, 0, 0);
+	border-left: 5px solid #000;
 	width: 0; height: 20px;
 }
 
 .tree li a{
-	border: 5px solid rgb(255, 0, 0);
+	border: 5px solid #000;
 	padding: 5px 10px;
 	text-decoration: none;
 	color: #666;
@@ -90,13 +90,13 @@ right connector from last child*/
 /*Time for some hover effects*/
 /*We will apply the hover effect the the lineage of the element also*/
 .tree li a:hover, .tree li a:hover+ul li a {
-	background: #f00cab; color: #000; border: 5px solid #0055e7;
+	background: #000; color: #000; border: 5px solid #000;
 }
 /*Connector styles on hover*/
 .tree li a:hover+ul li::after, 
 .tree li a:hover+ul li::before, 
 .tree li a:hover+ul::before, 
 .tree li a:hover+ul ul::before{
-	border-color:  #005eff;
+	border-color:  #000;
 }
 
